Some Design changes And fixing image upload